
Bugs fixed
* Default dates sometimes off by a day (before or after the current day) (#2587)
* Customers and vendors in parts screen selectable through drop-downs
* Overpayments not shown in Cash > Reports > Receipts (#3577)
* Handling of currencies with short codes or unusual characters (#4435, #4436)
* Formatting of columns in the 'Inventory Activity' report

Code cleanup
* Reduce use of LedgerSMB::App_State and LedgerSMB::App_State::Locale
* Replace unnecessary UNION selects on ar/ap/gl by select on transactions
* Remove legacy infrastructure to generate table-formatted report output
* Remove unmaintained ability from Makefile to install dependencies
* Moved authentication for 'setup.pl', making it stand-alone
* Removed use of LSMB_ALWAYS_MONEY environment variable
* Replaced 'no strict "refs"' with use of Symbol module
* Removed tables 'fixes' and 'menu_attribute'
* Removed template functions escape(), tt_url() & UNESCAPE()
* Javascript improvements based on automated code review from lgtm.com
* Disentangled processing of UI and printed documents
* Remove remnants of custom field support
* Remove unused infrastructure to administer access role groups
* Stricter data model for storage of foreign currency exchange rates
* Simplified request handling by
  * Making old/bin/old-handler.pl a PSGI app (LedgerSMB::oldHandler)
  * Stripping LedgerSMB::Form from anything handled by middleware
  * Separating 'setup.pl authentication' into its own middleware
* Remove unused 'queue_payments' and 'poll_frequency' settings
* Remove unsupported, non-functioning scripts for asynchronous bulk payments

Dependency updates
* Dojo Toolkit updated to 1.16.0
* TeX::Encode >= 2.007
* Authen::SASL (new)
* Cookie::Baker (new)
* Email::Sender (new)
* Email::Stuffer (new)
* Session::Storage::Secure (new)
* String::Random (new)
* MIME::Lite (dropped)


Changelog for 1.7 Series
2019-10-04

Changelog for 1.7.9
* Fix authentication issue due to inconsistent cookie handling

